Linas code as functions and hashtags in streamlit

--- a/notebooks/comments_ingredients.ipynb
+++ b/notebooks/comments_ingredients.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 4,
    "id": "eaedf72b",
    "metadata": {},
    "outputs": [
@@ -10,9 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Surface\\AppData\\Local\\Temp\\ipykernel_20832\\3560241292.py:18: DtypeWarning: Columns (12,34) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(\"../data/comments_post.csv\")\n",
-      "C:\\Users\\Surface\\AppData\\Local\\Temp\\ipykernel_20832\\3560241292.py:30: UserWarning: Converting to PeriodArray/Index representation will drop timezone information.\n",
+      "/var/folders/5k/b8_r8jw502n4zztm42zd76m80000gn/T/ipykernel_26566/765674746.py:30: UserWarning: Converting to PeriodArray/Index representation will drop timezone information.\n",
       "  df[\"week\"] = df[\"createTimeISO\"].dt.to_period(\"W\").dt.start_time\n"
      ]
     }
@@ -35,11 +33,11 @@
     "    locale.setlocale(locale.LC_TIME, 'C')\n",
     "\n",
     "# Load and Prepare Data\n",
-    "df = pd.read_csv(\"../data/comments_post.csv\")\n",
+    "df = pd.read_csv(\"/Users/ritushetkar/env_capstone/data/comments_posts_transcripts.csv\")\n",
     "\n",
     "# Basic cleaning and filtering\n",
-    "df = df[df[\"text_comment\"].notna() & (df[\"playCount\"] > 0)].copy()\n",
-    "df[\"text_comment\"] = df[\"text_comment\"].astype(str).str.lower()\n",
+    "df = df[df[\"comment\"].notna() & (df[\"playCount\"] > 0)].copy()\n",
+    "df[\"comment\"] = df[\"comment\"].astype(str).str.lower()\n",
     "df[\"createTimeISO\"] = pd.to_datetime(df[\"createTimeISO\"])\n",
     "\n",
     "# Filter to last 6 months\n",
@@ -105,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "6c944c8a",
    "metadata": {},
    "outputs": [],
@@ -121,7 +119,7 @@
     "                break\n",
     "    return list(matched)\n",
     "\n",
-    "df[\"matched_ingredients\"] = df[\"text_comment\"].apply(find_ingredient)"
+    "df[\"matched_ingredients\"] = df[\"comment\"].apply(find_ingredient)"
    ]
   },
   {
@@ -134,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "38ac0512",
    "metadata": {},
    "outputs": [
@@ -171,7 +169,7 @@
     "weekly_counts = df_mentions.groupby([\"week\", \"ingredient\"]).size().reset_index(name=\"mention_count\")\n",
     "\n",
     "# Total comments per week\n",
-    "comments_per_week = df.groupby(\"week\")[\"text_comment\"].count().reset_index(name=\"total_comments\")\n",
+    "comments_per_week = df.groupby(\"week\")[\"comment\"].count().reset_index(name=\"total_comments\")\n",
     "\n",
     "# Merge and normalize\n",
     "weekly_counts = weekly_counts.merge(comments_per_week, on=\"week\", how=\"left\")\n",
@@ -325,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "id": "5b66f596",
    "metadata": {},
    "outputs": [
@@ -744,7 +742,7 @@
     "\n",
     "# Apply only on rows with matched ingredients\n",
     "df_sentiment = df[df[\"matched_ingredients\"].str.len() > 0].copy()\n",
-    "df_sentiment[[\"sentiment\", \"confidence\"]] = df_sentiment[\"text_comment\"].apply(analyze_sentiment)\n",
+    "df_sentiment[[\"sentiment\", \"confidence\"]] = df_sentiment[\"comment\"].apply(analyze_sentiment)\n",
     "\n",
     "# Explode to 1 row per ingredient\n",
     "df_sentiment_exploded = df_sentiment.explode(\"matched_ingredients\")\n",
@@ -842,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "id": "13df56ca",
    "metadata": {},
    "outputs": [
@@ -1088,7 +1086,7 @@
     "    df_sentiment_clean.sort_values(by=\"confidence\", ascending=False)\n",
     "    .groupby([\"matched_ingredients\", \"sentiment\"])\n",
     "    .first()\n",
-    "    .reset_index()[[\"matched_ingredients\", \"sentiment\", \"text_comment\", \"confidence\"]]\n",
+    "    .reset_index()[[\"matched_ingredients\", \"sentiment\", \"comment\", \"confidence\"]]\n",
     ")\n",
     "\n",
     "# Optional: sort for easier readability\n",
@@ -1101,7 +1099,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "skincare-analysis-6rggZTBS-py3.10",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1115,7 +1113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
