--- a/skincare/scripts/test.ipynb
+++ b/skincare/scripts/test.ipynb
@@ -4662,6 +4662,311 @@
    "id": "9a2405e8",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import spacy\n",
+    "\n",
+    "# Load spaCy English model\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "\n",
+    "def extract_brand_ingredient_with_dependency(comment, ingredient_map):\n",
+    "    if pd.isnull(comment):\n",
+    "        return [], []\n",
+    "\n",
+    "    doc = nlp(comment)\n",
+    "    matched_ingredients = set()\n",
+    "    matched_brands = set()\n",
+    "\n",
+    "    # Flatten synonyms to enable easier lookup\n",
+    "    synonym_to_ingr = {syn.lower(): ingr for ingr, syns in ingredient_map.items() for syn in syns}\n",
+    "\n",
+    "    for token in doc:\n",
+    "        word_lower = token.text.lower()\n",
+    "        if word_lower in synonym_to_ingr:\n",
+    "            ingr = synonym_to_ingr[word_lower]\n",
+    "            matched_ingredients.add(ingr)\n",
+    "\n",
+    "            # Walk up and around the dependency tree to find potential brand\n",
+    "            for ancestor in token.ancestors:\n",
+    "                if ancestor.text[0].isupper() and ancestor.pos_ in {\"PROPN\", \"NOUN\"}:\n",
+    "                    matched_brands.add(ancestor.text)\n",
+    "                    break  # only one brand per ingredient\n",
+    "            for child in token.children:\n",
+    "                if child.text[0].isupper() and child.pos_ in {\"PROPN\", \"NOUN\"}:\n",
+    "                    matched_brands.add(child.text)\n",
+    "\n",
+    "    return list(matched_ingredients), list(matched_brands)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "864d07e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[[\"matched_ingredients\", \"potential_brands\"]] = df[\"comment\"].apply(\n",
+    "    lambda c: pd.Series(extract_brand_ingredient_with_dependency(c, ingredient_map))\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "1b45b832",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['post_id', 'text', 'textLanguage', 'createTimeISO', 'isAd',\n",
+      "       'author_nickName', 'author_signature', 'author_fans', 'video_duration',\n",
+      "       'webVideoUrl', 'diggCount', 'shareCount', 'playCount', 'collectCount',\n",
+      "       'commentCount', 'isSponsored', 'searchHashtag_name',\n",
+      "       'searchHashtag_views', 'location_address', 'comment_id',\n",
+      "       'comment_createTimeISO_comment', 'comment', 'diggCount_comment',\n",
+      "       'replyCommentTotal_comment', 'uniqueId_comment', 'detected_language',\n",
+      "       'transcribed_text', 'video_description', 'bucketUrl', 'date',\n",
+      "       'comment_lang', 'week', 'matched_ingredients', 'potential_brands'],\n",
+      "      dtype='object')\n",
+      "  matched_ingredients potential_brands\n",
+      "0                  []               []\n",
+      "1                  []               []\n",
+      "2                  []               []\n",
+      "3                  []               []\n",
+      "4                  []               []\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.columns)\n",
+    "print(df[[\"matched_ingredients\", \"potential_brands\"]].head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "32f82679",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'potential_brands'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m~/env_capstone/.venv/lib/python3.10/site-packages/pandas/core/indexes/base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "File \u001b[0;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'potential_brands'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[45], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m vitamin_c_with_brands \u001b[38;5;241m=\u001b[39m vitamin_c_rows[vitamin_c_rows[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpotential_brands\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mapply(\u001b[38;5;28;01mlambda\u001b[39;00m x: \u001b[38;5;28mlen\u001b[39m(x) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mlist\u001b[39m) \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m)]\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# STEP 3: Explode\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m vitamin_c_brands_exploded \u001b[38;5;241m=\u001b[39m \u001b[43mvitamin_c_with_brands\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexplode\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mpotential_brands\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# STEP 4: Count\u001b[39;00m\n\u001b[1;32m     11\u001b[0m brand_counts \u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m     12\u001b[0m     vitamin_c_brands_exploded[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpotential_brands\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m     13\u001b[0m     \u001b[38;5;241m.\u001b[39mvalue_counts()\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;241m.\u001b[39mreset_index()\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;241m.\u001b[39mrename(columns\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mindex\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBrand\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpotential_brands\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMentions\u001b[39m\u001b[38;5;124m\"\u001b[39m})\n\u001b[1;32m     16\u001b[0m )\n",
+      "File \u001b[0;32m~/env_capstone/.venv/lib/python3.10/site-packages/pandas/core/frame.py:9846\u001b[0m, in \u001b[0;36mDataFrame.explode\u001b[0;34m(self, column, ignore_index)\u001b[0m\n\u001b[1;32m   9844\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreset_index(drop\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m   9845\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(columns) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m-> 9846\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mexplode()\n\u001b[1;32m   9847\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   9848\u001b[0m     mylen \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mlambda\u001b[39;00m x: \u001b[38;5;28mlen\u001b[39m(x) \u001b[38;5;28;01mif\u001b[39;00m (is_list_like(x) \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(x) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m) \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;241m1\u001b[39m\n",
+      "File \u001b[0;32m~/env_capstone/.venv/lib/python3.10/site-packages/pandas/core/frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+      "File \u001b[0;32m~/env_capstone/.venv/lib/python3.10/site-packages/pandas/core/indexes/base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[1;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[1;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[1;32m   3810\u001b[0m     ):\n\u001b[1;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[0;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'potential_brands'"
+     ]
+    }
+   ],
+   "source": [
+    "# STEP 1: Filter for 'vitamin C'\n",
+    "vitamin_c_rows = df[df[\"matched_ingredients\"].apply(lambda lst: \"vitamin C\" in lst if isinstance(lst, list) else False)]\n",
+    "\n",
+    "# STEP 2: Filter rows with matched brands\n",
+    "vitamin_c_with_brands = vitamin_c_rows[vitamin_c_rows[\"potential_brands\"].apply(lambda x: len(x) > 0 if isinstance(x, list) else False)]\n",
+    "\n",
+    "# STEP 3: Explode\n",
+    "vitamin_c_brands_exploded = vitamin_c_with_brands.explode(\"potential_brands\")\n",
+    "\n",
+    "# STEP 4: Count\n",
+    "brand_counts = (\n",
+    "    vitamin_c_brands_exploded[\"potential_brands\"]\n",
+    "    .value_counts()\n",
+    "    .reset_index()\n",
+    "    .rename(columns={\"index\": \"Brand\", \"potential_brands\": \"Mentions\"})\n",
+    ")\n",
+    "\n",
+    "# STEP 5: Plot\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.barplot(data=brand_counts.head(15), x=\"Mentions\", y=\"Brand\", palette=\"viridis\")\n",
+    "plt.title(\"Top Brands Grammatically Linked to Vitamin C\")\n",
+    "plt.xlabel(\"Mentions\")\n",
+    "plt.ylabel(\"Brand\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "6bda7c3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['vitamin c', 'vitamin e', 'vitamin a', 'vitamin b', 'vitamin d']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([k for k in ingredient_map.keys() if \"vitamin\" in k.lower()])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "790b168f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i use the byoma face mist in the mornings- should i use my vitamin c before or after this?\n"
+     ]
+    }
+   ],
+   "source": [
+    "for comment in df[\"comment\"]:\n",
+    "    if \"vitamin c\" in comment:\n",
+    "        print(comment)\n",
+    "        break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "7d235ae6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_filtered = df[\n",
+    "    df[\"matched_ingredients\"].apply(lambda x: isinstance(x, list) and len(x) > 0) &\n",
+    "    df[\"potential_brands\"].apply(lambda x: isinstance(x, list) and len(x) > 0)\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "dcc19ec2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>post_id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>textLanguage</th>\n",
+       "      <th>createTimeISO</th>\n",
+       "      <th>isAd</th>\n",
+       "      <th>author_nickName</th>\n",
+       "      <th>author_signature</th>\n",
+       "      <th>author_fans</th>\n",
+       "      <th>video_duration</th>\n",
+       "      <th>webVideoUrl</th>\n",
+       "      <th>...</th>\n",
+       "      <th>uniqueId_comment</th>\n",
+       "      <th>detected_language</th>\n",
+       "      <th>transcribed_text</th>\n",
+       "      <th>video_description</th>\n",
+       "      <th>bucketUrl</th>\n",
+       "      <th>date</th>\n",
+       "      <th>comment_lang</th>\n",
+       "      <th>week</th>\n",
+       "      <th>matched_ingredients</th>\n",
+       "      <th>potential_brands</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 34 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [post_id, text, textLanguage, createTimeISO, isAd, author_nickName, author_signature, author_fans, video_duration, webVideoUrl, diggCount, shareCount, playCount, collectCount, commentCount, isSponsored, searchHashtag_name, searchHashtag_views, location_address, comment_id, comment_createTimeISO_comment, comment, diggCount_comment, replyCommentTotal_comment, uniqueId_comment, detected_language, transcribed_text, video_description, bucketUrl, date, comment_lang, week, matched_ingredients, potential_brands]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 34 columns]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_filtered.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "60f3f733",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hashtags=pd.read_csv('/Users/ritushetkar/env_capstone/data/hashags_result_table.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "f52dfa23",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['hashtags_name', 'year', 'week', 'weekly_engagement', 'post_count',\n",
+       "       'smoothed_post_count', 'normalized_weekly_engagement', 'date'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hashtags.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d592065f",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
